test/tests/compiler/16_characters_and_strings/invalid_parse/invalid_type_specifier_2.plx
pub fn main(none) i32 {
    # cannot combine char with any other type specifier
    # except signed and unsigned
    data x: char i64 = 0
    return 0
}
